--- a/client/app/account/login/login.pug
+++ b/client/app/account/login/login.pug
@@ -1,40 +1,41 @@
 .container
   .row
     .col-sm-12
-      h1 Login
-      p
-        | Accounts are reset on server restart from
-        code server/config/seed.js
-        | . Default account is
-        code test@example.com
-        | /
-        code test
-      p
-        | Admin account is
-        code admin@example.com
-        | /
-        code admin
+      //p
+      //  | Accounts are reset on server restart from
+      //  code server/config/seed.js
+      //  | . Default account is
+      //  code test@example.com
+      //  | /
+      //  code test
+      //p
+      //  | Admin account is
+      //  code admin@example.com
+      //  | /
+      //  code admin
 
-    .col-sm-12
+    div.col-sm-6.col-sm-offset-3.well
+      h1 Entrar
+        hr
       form.form(name='form', ng-submit='vm.login(form)', novalidate='')
         .form-group
           label Email
-          input.form-control(type='email', name='email', ng-model='vm.user.email')
+          input.form-control(type='email', name='email', ng-model='vm.user.email', placeholder="Ingresa tu correo electronico")
         .form-group
           label Password
-          input.form-control(type='password', name='password', ng-model='vm.user.password')
+          input.form-control(type='password', name='password', ng-model='vm.user.password' placeholder="Ingresa tu clave")
 
         .form-group.has-error
           p.help-block(ng-show='form.email.$error.required && form.password.$error.required && vm.submitted')
             | Please enter your email and password.
           p.help-block {{ vm.errors.login }}
 
-        div
-          button.btn.btn-inverse.btn-lg.btn-login(type='submit')
-            | Login
+        div.text-right
+          button.btn.btn-primary.btn-lg.btn-login(type='submit')
+            | Entrar
           = ' '
           a.btn.btn-default.btn-lg.btn-register(ui-sref='signup')
-            | Register
+            | Registrate
 
 
         //.row
