--- a/client/app/main/main.pug
+++ b/client/app/main/main.pug
@@ -41,7 +41,7 @@ header#banner.hero-unit
           button.btn.btn-default(type='button', ng-click='$ctrl.addType(2)') Denuncia &nbsp;&nbsp;
             i.fa.fa-exclamation(aria-hidden="true")
       div.text-center
-        img(height='250', ngf-src='$ctrl.image')
+        img(width='150', ngf-src='$ctrl.image')
       a#subir-button.btn.btn-default.form-control(accept='image/*', ngf-resize='{width: 450}',
       ngf-select='', ng-model='$ctrl.image',
       name='image', ngf-max-size='2MB', ngf-min-height='100') Sube una foto (opcional)
@@ -51,30 +51,32 @@ header#banner.hero-unit
     #events-div.col-lg-8.col-xs-12
       div.well
         h1.events-section-header Últimas denuncias y propuestas:
-        ul.nav.nav-tabs.nav-stacked.event-box.no-padding(ng-repeat='thing in $ctrl.awesomeThings')
-          li
-              div.imgAndTextcontainer
-                div.event-imgContainer
-                  a(ng-click='$ctrl.fullScreen(thing.image)')
-                    img.event-img.img-rounded(width='150', ng-src='/api/media?path={{thing.image}}')
-                div.event-text
-                  | {{thing.name}}
-                div.event-close
-                  button.close(type='button', ng-click='$ctrl.deleteThing(thing)') &times;
-              div.event-details
-                  span.label.label-success(ng-show='thing.type == 1')
-                    | Propuesta
-                  span.label.label-danger(ng-show='thing.type == 2')
-                    | Denuncia
-                  span
-                    b
-                      | &nbsp;&nbsp; publicada por {{thing.postedBy.name}}
-                      | el {{thing.createdAt | date: "dd/MM/yyyy \'a las\' h:mma"}}
+        div(infinite-scroll='$ctrl.nextPage()', infinite-scroll-disabled='$ctrl.busy', infinite-scroll-distance='0')
+          ul.nav.nav-tabs.nav-stacked.event-box.no-padding(ng-repeat='thing in $ctrl.items')
+            li
+                div.imgAndTextcontainer
+                  div.event-imgContainer
+                    a(ng-click='$ctrl.fullScreen(thing.image)')
+                      img.event-img.img-rounded(width='150', ng-src='/api/media?path={{thing.image}}')
+                  div.event-text
+                    | {{thing.name}}
+                  div.event-close
+                    button.close(ng-show='$ctrl.isAdmin()', type='button', ng-click='$ctrl.deleteThing(thing)') &times;
+                div.event-details
+                    span.label.label-success(ng-show='thing.type == 1')
+                      | Propuesta
+                    span.label.label-danger(ng-show='thing.type == 2')
+                      | Denuncia
+                    span
+                      b
+                        | &nbsp;&nbsp; publicada por {{thing.postedBy.name}}
+                        | el {{thing.createdAt | date: "dd/MM/yyyy \'a las\' h:mma"}}
 
 
 
 
 
+          div(ng-show='$ctrl.busy') Loading data...
   br
   br
   br
