--- a/client/app/main/main.pug
+++ b/client/app/main/main.pug
@@ -8,9 +8,9 @@ div#fullScreen(ng-show="fullScreenEnabled")
 
 header#banner.hero-unit
   .container
-    h1 La asamblea en tus manos
-    p.lead plataforma de comunicación ciudadana
-    img(src='assets/images/logo.jpg', class="img-rounded" alt='Asamblea Nacional de Venezuela')
+    //h1#main-title La asamblea en tus manos
+    //p.lead plataforma de comunicación ciudadana
+    img(src='assets/images/logo.png', id="main-logo" class="img-rounded" alt='Asamblea Nacional de Venezuela')
 
 .container
   .row
