--- a/client/components/navbar/navbar.pug
+++ b/client/components/navbar/navbar.pug
@@ -7,7 +7,7 @@ div.navbar.navbar-default.navbar-static-top
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') La AN en tu mano
+      a.navbar-brand(href='/') Asamblea en tus manos
 
     div#navbar-main.navbar-collapse.collapse(uib-collapse='$ctrl.isCollapsed')
       ul.nav.navbar-nav
@@ -32,4 +32,4 @@ div.navbar.navbar-default.navbar-static-top
             span.glyphicon.glyphicon-cog
 
         li(ng-show='$ctrl.isLoggedIn()')
-          a(ui-sref='logout') Logout
+          a(ui-sref='logout') Salir
