--- a/client/app/account/settings/settings.pug
+++ b/client/app/account/settings/settings.pug
@@ -1,11 +1,11 @@
 .container
   .row
     .col-sm-12
-      h1 Change Password
+      h1 Cambiar contraseña
     .col-sm-12
       form.form(name='form', ng-submit='vm.changePassword(form)', novalidate='')
         .form-group
-          label Current Password
+          label Contraseña actual
           input.form-control(type='password'
             name='password'
             ng-model='vm.user.oldPassword'
@@ -13,23 +13,24 @@
           p.help-block(ng-show='form.password.$error.mongoose')
             | {{ vm.errors.other }}
         .form-group
-          label New Password
+          label Nueva contraseña
           input.form-control(type='password'
             name='newPassword'
             ng-model='vm.user.newPassword'
             ng-minlength='3', required='')
           p.help-block(ng-show='(form.newPassword.$error.minlength || form.newPassword.$error.required) && (form.newPassword.$dirty || vm.submitted)')
-            | Password must be at least 3 characters.
+            | La contraseña debe ser mas larga
         .form-group
-          label Confirm New Password
+          label Confirmar nueva contraseña
           input.form-control(type='password'
             name='confirmPassword'
             ng-model='vm.user.confirmPassword'
             match="vm.user.newPassword"
             ng-minlength='3', required='')
           p.help-block(ng-show='fvm.orm.confirmPassword.$error.match && vm.submitted')
-            | Passwords must match.
+            | Las contraseñas deben ser iguales
 
         p.help-block  {{ vm.message }}
 
-        button.btn.btn-lg.btn-primary(type='submit') Save changes
+        div.text-right
+          button.btn.btn-lg.btn-primary(type='submit') Guardar cambios
