--- a/client/app/account/login/login.pug
+++ b/client/app/account/login/login.pug
@@ -19,23 +19,26 @@
         hr
       form.form(name='form', ng-submit='vm.login(form)', novalidate='')
         .form-group
-          label Email
-          input.form-control(type='email', name='email', ng-model='vm.user.email', placeholder="Ingresa tu correo electronico")
+          label Correo electronico
+          input.form-control(type='email', name='email', ng-model='vm.user.email', placeholder="Ingresa tu correo electronico", required="")
         .form-group
           label Password
-          input.form-control(type='password', name='password', ng-model='vm.user.password' placeholder="Ingresa tu clave")
+          input.form-control(type='password', name='password', ng-model='vm.user.password' placeholder="Ingresa tu clave", required="")
 
         .form-group.has-error
+          p.help-block(ng-show='form.email.$error.email && vm.submitted')
+            | Email invalido
           p.help-block(ng-show='form.email.$error.required && form.password.$error.required && vm.submitted')
-            | Please enter your email and password.
+            | Ingresa tu correo y contraseña.
           p.help-block {{ vm.errors.login }}
 
         div.text-right
           button.btn.btn-primary.btn-lg.btn-login(type='submit')
             | Entrar
-          = ' '
-          a.btn.btn-default.btn-lg.btn-register(ui-sref='signup')
-            | Registrate
+        div.text-right
+          br
+          a(ui-sref='signup')
+            |¿No tienes cuenta? Registrate
 
 
         //.row
