--- a/client/app/main/main.pug
+++ b/client/app/main/main.pug
@@ -8,8 +8,6 @@ div#fullScreen(ng-show="fullScreenEnabled")
 
 header#banner.hero-unit
   .container
-    //h1#main-title La asamblea en tus manos
-    //p.lead plataforma de comunicación ciudadana
     img(src='assets/images/logo.png', id="main-logo" class="img-rounded" alt='Asamblea Nacional de Venezuela')
 
 .container
@@ -82,7 +80,7 @@ header#banner.hero-unit
 
 
 
-          div(ng-show='$ctrl.busy') Loading data...
+          div(ng-show='$ctrl.busy') ...
   br
   br
   br
